--- a/assets/cloudformation/slurm_accounting_db.yml
+++ b/assets/cloudformation/slurm_accounting_db.yml
@@ -30,6 +30,7 @@ Resources:
         GenerateStringKey: "password"
         ExcludeCharacters: '"@/\#'
         PasswordLength: 16
+      KmsKeyId: alias/aws/secretsmanager
 
   DBSubnetGroup:
     Type: AWS::RDS::DBSubnetGroup
@@ -63,12 +64,14 @@ Resources:
       VpcSecurityGroupIds:
         - !Ref DatabaseSecurityGroup
       StorageEncrypted: true
+      DeletionProtection: true
 
   AuroraMasterSecretPassword:
     Type: AWS::SecretsManager::Secret
     Properties:
       Name: !Sub ${AWS::StackName}-rds-slurm-accounting-secret-password
       SecretString: !Sub '{{resolve:secretsmanager:${AuroraMasterSecret}:SecretString:password}}'
+      KmsKeyId: alias/aws/secretsmanager
 
   AuroraDBPrimaryInstance:
     Type: AWS::RDS::DBInstance
