--- a/assets/cloudformation/infra.yml
+++ b/assets/cloudformation/infra.yml
@@ -115,7 +115,8 @@ Resources:
 
   FlowLogLogGroup:
     Type: AWS::Logs::LogGroup
-    Properties: {}
+    Properties:
+      RetentionInDays: 14
 
   FlowLogDeliveryRole:
     Type: AWS::IAM::Role
@@ -461,6 +462,8 @@ Resources:
     Properties:
       IpAddressType: ipv4
       LoadBalancerAttributes:
+        - Key: deletion_protection.enabled
+          Value: true
         - Key: access_logs.s3.enabled
           Value: true
         - Key: access_logs.s3.bucket
@@ -505,6 +508,7 @@ Resources:
   ClusterAllowAllInboundFromSelf:
     Type: AWS::EC2::SecurityGroupIngress
     Properties:
+      Description: Allow all inbound traffic from the cluster security group
       GroupId: !Ref ClusterSecurityGroup
       IpProtocol: '-1'
       SourceSecurityGroupId: !Ref ClusterSecurityGroup
@@ -512,6 +516,7 @@ Resources:
   ClusterAllowAllOutboundToSelf:
     Type: AWS::EC2::SecurityGroupEgress
     Properties:
+      Description: Allow all outbound traffic to the cluster security group
       GroupId: !Ref ClusterSecurityGroup
       IpProtocol:  '-1'
       DestinationSecurityGroupId: !Ref ClusterSecurityGroup
@@ -520,6 +525,7 @@ Resources:
   ClusterAllowAllOutboundToWorld:
     Type: AWS::EC2::SecurityGroupEgress
     Properties:
+      Description: Allow all outbound traffic to the world
       GroupId: !Ref ClusterSecurityGroup
       IpProtocol: '-1'
       CidrIp: 0.0.0.0/0
